--- a/index.html
+++ b/index.html
@@ -22,91 +22,91 @@
         </ul>
       </nav>
     </header>
-
-    <!-- герой -->
-    <section>
-      <h1>
-        Effective Solutions for <br />
-        Your Business
-      </h1>
-      <a href="">Order Service</a>
-    </section>
-    <!-- послуги -->
-    <section>
-      <h2>services</h2>
-      <ul>
-        <li>
-          <h3>Strategy</h3>
-          <p>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
-          </p>
-        </li>
-        <li>
-          <h3>Punctuality</h3>
-          <p>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
-          </p>
-        </li>
-        <li>
-          <h3>Diligence</h3>
-          <p>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li>
-          <h3>Technologies</h3>
-          <p>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <!-- що ми робимо -->
-    <section>
-      <h2>What are we doing</h2>
-      <ul>
-        <li>
-          <a href=""><img src="images/foto1.png" alt="computer monitor" /></a>
-        </li>
-        <li>
-          <a href=""><img src="/images/foto2.png" alt="phone screen" /></a>
-        </li>
-        <li>
-          <a href=""><img src="/images/foto3.png" alt="phone" /></a>
-        </li>
-      </ul>
-    </section>
-    <!-- команда -->
-    <section>
-      <h2>Our Team</h2>
-      <ul>
-        <li>
-          <img src="/images/foto-team-1.png" alt="Mark Guerrero" />
-          <h3>Mark Guerrero</h3>
-          <p>Product Designer</p>
-        </li>
-        <li>
-          <img src="/images/foto-team-2.png" alt="Tom Ford" />
-          <h3>Tom Ford</h3>
-          <p>Frontend Developer</p>
-        </li>
-        <li>
-          <img src="/images/foto-team-3.png" alt="Camila Garcia" />
-          <h3>Camila Garcia</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src="/images/foto-team-4.png" alt="Daniel Wilson" />
-          <h3>Daniel Wilson</h3>
-          <p>UI Designer</p>
-        </li>
-      </ul>
-    </section>
-
+    <main>
+      <!-- герой -->
+      <section>
+        <h1>
+          Effective Solutions for <br />
+          Your Business
+        </h1>
+        <a href="">Order Service</a>
+      </section>
+      <!-- послуги -->
+      <section>
+        <h2>services</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- що ми робимо -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <a href=""><img src="images/foto1.png" alt="computer monitor" /></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/foto2.png" alt="phone screen" /></a>
+          </li>
+          <li>
+            <a href=""><img src="/images/foto3.png" alt="phone" /></a>
+          </li>
+        </ul>
+      </section>
+      <!-- команда -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="/images/foto-team-1.png" alt="Mark Guerrero" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="/images/foto-team-2.png" alt="Tom Ford" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="/images/foto-team-3.png" alt="Camila Garcia" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="/images/foto-team-4.png" alt="Daniel Wilson" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
     <!-- підвал -->
     <footer>
       <a href=""><img src="/images/Logo.svg" alt="" /></a>
