--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- шапка -->
     <header>
       <nav>
-        <a href="index.html"><img src="/images/Logo.svg" alt="" /></a>
+        <a href="./index.html"><img src="/images/Logo.svg" alt="Logo" /></a>
         <ul>
           <li><a href=""></a>Studio</li>
           <li><a href="">Portfolio</a></li>
@@ -109,7 +109,7 @@
     </main>
     <!-- підвал -->
     <footer>
-      <a href=""><img src="/images/Logo.svg" alt="" /></a>
+      <a href="./index.html"><img src="/images/Logo.svg" alt="" />WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
