--- a/index.html
+++ b/index.html
@@ -10,25 +10,24 @@
     <!-- шапка -->
     <header>
       <nav>
-        <a href="./index.html"><img src="/images/Logo.svg" alt="Logo" /></a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href=""></a>Studio</li>
+          <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
+      </nav>
+      <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
-      </nav>
+      </address>
     </header>
     <main>
       <!-- герой -->
       <section>
-        <h1>
-          Effective Solutions for <br />
-          Your Business
-        </h1>
+        <h1>Effective Solutions for Your Business</h1>
         <a href="">Order Service</a>
       </section>
       <!-- послуги -->
@@ -70,7 +69,9 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <a href=""><img src="/images/foto1.jpg" alt="computer monitor" /></a>
+            <a href=""
+              ><img src="/images/foto1.jpg" alt="computer monitor"
+            /></a>
           </li>
           <li>
             <a href=""><img src="/images/foto2.jpg" alt="phone screen" /></a>
