--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
         <ul>
           <li>
             <a href=""
-              ><img src="/images/foto1.jpg" alt="computer monitor"
+              ><img src="./images/foto1.jpg" alt="computer monitor"
             /></a>
           </li>
           <li>
-            <a href=""><img src="/images/foto2.jpg" alt="phone screen" /></a>
+            <a href=""><img src="./images/foto2.jpg" alt="phone screen" /></a>
           </li>
           <li>
-            <a href=""><img src="/images/foto3.jpg" alt="phone" /></a>
+            <a href=""><img src="./images/foto3.jpg" alt="phone" /></a>
           </li>
         </ul>
       </section>
@@ -86,22 +86,22 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="/images/foto-team-1.jpg" alt="Mark Guerrero" />
+            <img src="./images/foto-team-1.jpg" alt="Mark Guerrero" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images/foto-team-2.jpg" alt="Tom Ford" />
+            <img src="./images/foto-team-2.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/foto-team-3.jpg" alt="Camila Garcia" />
+            <img src="./images/foto-team-3.jpg" alt="Camila Garcia" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/foto-team-4.jpg" alt="Daniel Wilson" />
+            <img src="./images/foto-team-4.jpg" alt="Daniel Wilson" width="264"/>
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
