--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <!-- герой -->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <a href="">Order Service</a>
+        <button type="button">Order Service</button>
       </section>
       <!-- послуги -->
       <section>
@@ -69,15 +69,13 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <a href=""
-              ><img src="./images/foto1.jpg" alt="computer monitor"
-            /></a>
+            <img src="./images/foto1.jpg" alt="computer monitor" width="360" />
           </li>
           <li>
-            <a href=""><img src="./images/foto2.jpg" alt="phone screen" /></a>
+            <img src="./images/foto2.jpg" alt="phone screen" width="360" />
           </li>
           <li>
-            <a href=""><img src="./images/foto3.jpg" alt="phone" /></a>
+            <img src="./images/foto3.jpg" alt="phone" width="360" />
           </li>
         </ul>
       </section>
@@ -86,7 +84,11 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/foto-team-1.jpg" alt="Mark Guerrero" width="264" />
+            <img
+              src="./images/foto-team-1.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
@@ -96,12 +98,20 @@
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/foto-team-3.jpg" alt="Camila Garcia" width="264" />
+            <img
+              src="./images/foto-team-3.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/foto-team-4.jpg" alt="Daniel Wilson" width="264"/>
+            <img
+              src="./images/foto-team-4.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
